Fix missing color variable

--- a/css/src/_settings-af4-override.scss
+++ b/css/src/_settings-af4-override.scss
@@ -1,6 +1,7 @@
 /* Override AgriFlex4 settings with a !default value. */
 $nat-green: #0C6C31;
 $nat-brown: #82591F;
+$nav-yellow: #FFE404;
 
 $af4-colors: (
 	primary: $nat-green,
